Correct left alignment of no-suggestions bullet list.

--- a/components/x-topic-search/src/TopicSearch.scss
+++ b/components/x-topic-search/src/TopicSearch.scss
@@ -120,5 +120,6 @@
 .no-suggestions__message {
 	margin-top: 12px;
 	margin-bottom: 0;
+	padding-left: 20px;
 	list-style-type: disc;
 }
